Fix css margin when input field has error to be more aligned with uploader

--- a/src/scenes/Moves/Ppm/PPMPaymentRequest.css
+++ b/src/scenes/Moves/Ppm/PPMPaymentRequest.css
@@ -121,3 +121,7 @@
 .one-half {
   width: 50%;
 }
+
+.input-group .usa-input-error {
+  margin-top: 0px;
+}
